Tweak style of sample display page

--- a/arrange.html
+++ b/arrange.html
@@ -38,7 +38,7 @@
 				-webkit-box-sizing: border-box;
 				-moz-box-sizing: border-box;
 				box-sizing: border-box;
-				border: 1px solid #ccc;
+				border: 1px solid #ddd;
 				background-color: #f3f3f3;
 				line-height: 2.6em;
 				text-align: center;
@@ -71,112 +71,112 @@
 			<h2>The Grid</h2>
 			
 			<section class="row">
-				<div class="one column">1 col</div>
-				<div class="eleven column">11 cols</div>
+				<div class="one column">×1</div>
+				<div class="eleven column">×11</div>
 			</section>
 			
 			<section class="row">
-				<div class="two column">2 cols</div>
-				<div class="ten column">10 cols</div>
+				<div class="two column">×2</div>
+				<div class="ten column">×10</div>
 			</section>
 			
 			<section class="row">
-				<div class="three column">3 cols</div>
-				<div class="nine column">9 cols</div>
+				<div class="three column">×3</div>
+				<div class="nine column">×9</div>
 			</section>
 			
 			<section class="row">
-				<div class="four column">4 cols</div>
-				<div class="eight column">8 cols</div>
+				<div class="four column">×4</div>
+				<div class="eight column">×8</div>
 			</section>
 			
 			<section class="row">
-				<div class="five column">5 cols</div>
-				<div class="seven column">7 cols</div>
+				<div class="five column">×5</div>
+				<div class="seven column">×7</div>
 			</section>
 			
 			<section class="row">
-				<div class="six column">6 cols</div>
-				<div class="six column">6 cols</div>
+				<div class="six column">×6</div>
+				<div class="six column">×6</div>
 			</section>
 
 			<section class="row">
-				<div class="seven column">7 cols</div>
-				<div class="five column">5 cols</div>
+				<div class="seven column">×7</div>
+				<div class="five column">×5</div>
 			</section>
 
 			<section class="row">
-				<div class="eight column">8 cols</div>
-				<div class="four column">4 cols</div>
+				<div class="eight column">×8</div>
+				<div class="four column">×4</div>
 			</section>
 
 			<section class="row">
-				<div class="nine column">9 cols</div>
-				<div class="three column">3 cols</div>
+				<div class="nine column">×9</div>
+				<div class="three column">×3</div>
 			</section>
 
 			<section class="row">
-				<div class="ten column">10 cols</div>
-				<div class="two column">2 cols</div>
+				<div class="ten column">×10</div>
+				<div class="two column">×2</div>
 			</section>
 
 			<section class="row">
-				<div class="eleven column">11 cols</div>
-				<div class="one column">1 col</div>
+				<div class="eleven column">×11</div>
+				<div class="one column">×1</div>
 			</section>
 
 			<section class="row">
-				<div class="twelve column">12 cols</div>
+				<div class="twelve column">×12</div>
 			</section>
 			
 			
 			<h2>3-Column Layout</h2>
 			
 			<section class="row large">
-				<div class="four column">4 cols</div>
-				<div class="four column">4 cols</div>
-				<div class="four column">4 cols</div>
+				<div class="four column">×4</div>
+				<div class="four column">×4</div>
+				<div class="four column">×4</div>
 			</section>
 			
 			
 			<h2>Off-Balance 3-Column Layout</h2>
 			
 			<section class="row large">
-				<div class="six column">6 cols</div>
-				<div class="three column">3 cols</div>
-				<div class="three column">3 cols</div>
+				<div class="six column">×6</div>
+				<div class="three column">×3</div>
+				<div class="three column">×3</div>
 			</section>
 			
 			
 			<h2>4-Column Layout</h2>
 			
 			<section class="row medium">
-				<div class="three column">3 cols</div>
-				<div class="three column">3 cols</div>
-				<div class="three column">3 cols</div>
-				<div class="three column">3 cols</div>
+				<div class="three column">×3</div>
+				<div class="three column">×3</div>
+				<div class="three column">×3</div>
+				<div class="three column">×3</div>
 			</section>
 			
 			
 			<h2>Sample Page Layout</h2>
 			
 			<section class="row x-large">
-				<div class="twelve column">12 cols</div>
+				<div class="twelve column">×12</div>
 			</section>
 			
 			<section class="row medium">
-				<div class="six column">6 cols</div>
-				<div class="six column">6 cols</div>
+				<div class="six column">×6</div>
+				<div class="six column">×6</div>
 			</section>
 			
 			<section class="row large">
-				<div class="four column">4 cols</div>
-				<div class="four column">4 cols</div>
-				<div class="four column">4 cols</div>
+				<div class="four column">×4</div>
+				<div class="four column">×4</div>
+				<div class="four column">×4</div>
 			</section>
 
 			<section class="row medium">
-				<div class="twelve column">12 cols</div>
+				<div class="twelve column">×12</div>
 			</section>
 		</div>
 	</body>
