Add Gather, for forms

--- a/arrange.html
+++ b/arrange.html
@@ -5,59 +5,7 @@
 		<title>Arrange — A Lightweight Grid</title>
 		
 		<link rel="stylesheet" href="./css/arrange.css">
-		<style>
-			html {
-				font: normal normal normal 1em/1.5 "Helvetica Neue", Arial, sans-serif;
-				color: #16161e;
-				margin: 0;
-				padding: 0;
-			}
-			
-			body {
-				margin: 0;
-				padding: 0;
-			}
-			
-			.page {
-				max-width: 80em;
-				width: 92%;
-				margin: 1.5em auto;
-			}
-			
-			h1 {
-				margin: 0 0 0.6em;
-				padding-bottom: 0.5em;
-				border-bottom: 1px solid #ccc;
-			}
-			
-			h2 {
-				margin: 1.25em 0 0.5em;
-			}
-			
-			section > div {
-				-webkit-box-sizing: border-box;
-				-moz-box-sizing: border-box;
-				box-sizing: border-box;
-				border: 1px solid #ddd;
-				background-color: #f3f3f3;
-				line-height: 2.6em;
-				text-align: center;
-				overflow: hidden;
-				white-space: nowrap;
-			}
-			
-			section.medium > div {
-				line-height: 8em;
-			}
-			
-			section.large > div {
-				line-height: 16em;
-			}
-			
-			section.x-large > div {
-				line-height: 22em;
-			}
-		</style>
+		<link rel="stylesheet" href="./css/sample.css">
 	</head>
 	<body>
 		<div class="page">
@@ -70,114 +18,114 @@
 			
 			<h2>The Grid</h2>
 			
-			<section class="row">
+			<div class="row">
 				<div class="one column">×1</div>
 				<div class="eleven column">×11</div>
-			</section>
+			</div>
 			
-			<section class="row">
+			<div class="row">
 				<div class="two column">×2</div>
 				<div class="ten column">×10</div>
-			</section>
+			</div>
 			
-			<section class="row">
+			<div class="row">
 				<div class="three column">×3</div>
 				<div class="nine column">×9</div>
-			</section>
+			</div>
 			
-			<section class="row">
+			<div class="row">
 				<div class="four column">×4</div>
 				<div class="eight column">×8</div>
-			</section>
+			</div>
 			
-			<section class="row">
+			<div class="row">
 				<div class="five column">×5</div>
 				<div class="seven column">×7</div>
-			</section>
+			</div>
 			
-			<section class="row">
+			<div class="row">
 				<div class="six column">×6</div>
 				<div class="six column">×6</div>
-			</section>
+			</div>
 
-			<section class="row">
+			<div class="row">
 				<div class="seven column">×7</div>
 				<div class="five column">×5</div>
-			</section>
+			</div>
 
-			<section class="row">
+			<div class="row">
 				<div class="eight column">×8</div>
 				<div class="four column">×4</div>
-			</section>
+			</div>
 
-			<section class="row">
+			<div class="row">
 				<div class="nine column">×9</div>
 				<div class="three column">×3</div>
-			</section>
+			</div>
 
-			<section class="row">
+			<div class="row">
 				<div class="ten column">×10</div>
 				<div class="two column">×2</div>
-			</section>
+			</div>
 
-			<section class="row">
+			<div class="row">
 				<div class="eleven column">×11</div>
 				<div class="one column">×1</div>
-			</section>
+			</div>
 
-			<section class="row">
+			<div class="row">
 				<div class="twelve column">×12</div>
-			</section>
+			</div>
 			
 			
 			<h2>3-Column Layout</h2>
 			
-			<section class="row large">
+			<div class="row large">
 				<div class="four column">×4</div>
 				<div class="four column">×4</div>
 				<div class="four column">×4</div>
-			</section>
+			</div>
 			
 			
 			<h2>Off-Balance 3-Column Layout</h2>
 			
-			<section class="row large">
+			<div class="row large">
 				<div class="six column">×6</div>
 				<div class="three column">×3</div>
 				<div class="three column">×3</div>
-			</section>
+			</div>
 			
 			
 			<h2>4-Column Layout</h2>
 			
-			<section class="row medium">
+			<div class="row medium">
 				<div class="three column">×3</div>
 				<div class="three column">×3</div>
 				<div class="three column">×3</div>
 				<div class="three column">×3</div>
-			</section>
+			</div>
 			
 			
 			<h2>Sample Page Layout</h2>
 			
-			<section class="row x-large">
+			<div class="row x-large">
 				<div class="twelve column">×12</div>
-			</section>
+			</div>
 			
-			<section class="row medium">
+			<div class="row medium">
 				<div class="six column">×6</div>
 				<div class="six column">×6</div>
-			</section>
+			</div>
 			
-			<section class="row large">
+			<div class="row large">
 				<div class="four column">×4</div>
 				<div class="four column">×4</div>
 				<div class="four column">×4</div>
-			</section>
+			</div>
 
-			<section class="row medium">
+			<div class="row medium">
 				<div class="twelve column">×12</div>
-			</section>
+			</div>
 		</div>
 	</body>
 </html>
