--- a/arrange.html
+++ b/arrange.html
@@ -9,122 +9,158 @@
 	</head>
 	<body>
 		<div class="page">
-			<h1>Arrange</h1>
-			
-			<p>
-				<em>Arrange</em> is a light-weight grid built upon percentages.
-			</p>
-			
-			
-			<h2>The Grid</h2>
-			
-			<div class="row">
-				<div class="one column">×1</div>
-				<div class="eleven column">×11</div>
+			<div class="base-grid">
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
+				<div class="one column">&nbsp;</div>
 			</div>
 			
-			<div class="row">
-				<div class="two column">×2</div>
-				<div class="ten column">×10</div>
-			</div>
-			
-			<div class="row">
-				<div class="three column">×3</div>
-				<div class="nine column">×9</div>
-			</div>
-			
-			<div class="row">
-				<div class="four column">×4</div>
-				<div class="eight column">×8</div>
-			</div>
-			
-			<div class="row">
-				<div class="five column">×5</div>
-				<div class="seven column">×7</div>
-			</div>
-			
-			<div class="row">
-				<div class="six column">×6</div>
-				<div class="six column">×6</div>
-			</div>
+			<div class="examples">
+				<h1>Arrange</h1>
 
-			<div class="row">
-				<div class="seven column">×7</div>
-				<div class="five column">×5</div>
-			</div>
+				<p>
+					<em>Arrange</em> is a light-weight grid built upon percentages.
+					Note that due to differences in rounding, sometimes a grid may be off by a pixel.
+					This is an unavoidable side-effect of using percentages, although also note that
+					without a visible grid on at all times, this is mostly unnoticeable.
+				</p>
 
-			<div class="row">
-				<div class="eight column">×8</div>
-				<div class="four column">×4</div>
-			</div>
 
-			<div class="row">
-				<div class="nine column">×9</div>
-				<div class="three column">×3</div>
-			</div>
+				<h2>The Grid</h2>
 
-			<div class="row">
-				<div class="ten column">×10</div>
-				<div class="two column">×2</div>
-			</div>
+				<div class="row">
+					<div class="one column">×1</div>
+					<div class="eleven column">×11</div>
+				</div>
 
-			<div class="row">
-				<div class="eleven column">×11</div>
-				<div class="one column">×1</div>
-			</div>
+				<div class="row">
+					<div class="two column">×2</div>
+					<div class="ten column">×10</div>
+				</div>
 
-			<div class="row">
-				<div class="twelve column">×12</div>
-			</div>
-			
-			
-			<h2>3-Column Layout</h2>
-			
-			<div class="row large">
-				<div class="four column">×4</div>
-				<div class="four column">×4</div>
-				<div class="four column">×4</div>
-			</div>
-			
-			
-			<h2>Off-Balance 3-Column Layout</h2>
-			
-			<div class="row large">
-				<div class="six column">×6</div>
-				<div class="three column">×3</div>
-				<div class="three column">×3</div>
-			</div>
-			
-			
-			<h2>4-Column Layout</h2>
-			
-			<div class="row medium">
-				<div class="three column">×3</div>
-				<div class="three column">×3</div>
-				<div class="three column">×3</div>
-				<div class="three column">×3</div>
-			</div>
-			
-			
-			<h2>Sample Page Layout</h2>
-			
-			<div class="row x-large">
-				<div class="twelve column">×12</div>
-			</div>
-			
-			<div class="row medium">
-				<div class="six column">×6</div>
-				<div class="six column">×6</div>
-			</div>
-			
-			<div class="row large">
-				<div class="four column">×4</div>
-				<div class="four column">×4</div>
-				<div class="four column">×4</div>
-			</div>
+				<div class="row">
+					<div class="three column">×3</div>
+					<div class="nine column">×9</div>
+				</div>
 
-			<div class="row medium">
-				<div class="twelve column">×12</div>
+				<div class="row">
+					<div class="four column">×4</div>
+					<div class="eight column">×8</div>
+				</div>
+
+				<div class="row">
+					<div class="five column">×5</div>
+					<div class="seven column">×7</div>
+				</div>
+
+				<div class="row">
+					<div class="six column">×6</div>
+					<div class="six column">×6</div>
+				</div>
+
+				<div class="row">
+					<div class="seven column">×7</div>
+					<div class="five column">×5</div>
+				</div>
+
+				<div class="row">
+					<div class="eight column">×8</div>
+					<div class="four column">×4</div>
+				</div>
+
+				<div class="row">
+					<div class="nine column">×9</div>
+					<div class="three column">×3</div>
+				</div>
+
+				<div class="row">
+					<div class="ten column">×10</div>
+					<div class="two column">×2</div>
+				</div>
+
+				<div class="row">
+					<div class="eleven column">×11</div>
+					<div class="one column">×1</div>
+				</div>
+
+				<div class="row">
+					<div class="twelve column">×12</div>
+				</div>
+
+
+				<h2>3-Column Layout</h2>
+
+				<div class="row large">
+					<div class="four column">×4</div>
+					<div class="four column">×4</div>
+					<div class="four column">×4</div>
+				</div>
+
+
+				<h2>Off-Balance 3-Column Layout</h2>
+
+				<div class="row large">
+					<div class="six column">×6</div>
+					<div class="three column">×3</div>
+					<div class="three column">×3</div>
+				</div>
+
+
+				<h2>4-Column Layout</h2>
+
+				<div class="row medium">
+					<div class="three column">×3</div>
+					<div class="three column">×3</div>
+					<div class="three column">×3</div>
+					<div class="three column">×3</div>
+				</div>
+
+
+				<h2>2-Column With Offset</h2>
+
+				<div class="row large">
+					<div class="seven column">×7</div>
+					<div class="four column offset-by-one">×4 (+1)</div>
+				</div>
+
+
+				<h2>Reverse 2-Column With Offset</h2>
+
+				<div class="reverse row large">
+					<div class="seven column">×7</div>
+					<div class="four column offset-by-one">×4 (+1)</div>
+				</div>
+
+
+				<h2>Sample Page Layout</h2>
+
+				<div class="row x-large">
+					<div class="twelve column">×12</div>
+				</div>
+
+				<div class="row medium">
+					<div class="six column">×6</div>
+					<div class="six column">×6</div>
+				</div>
+
+				<div class="row large">
+					<div class="four column">×4</div>
+					<div class="four column">×4</div>
+					<div class="four column">×4</div>
+				</div>
+
+				<div class="row medium">
+					<div class="twelve column">×12</div>
+				</div>
 			</div>
 		</div>
 	</body>
