More examples for Arrange

--- a/arrange.html
+++ b/arrange.html
@@ -34,7 +34,7 @@
 					without a visible grid on at all times, this is mostly unnoticeable.
 				</p>
 
-
+				
 				<h2>The Grid</h2>
 
 				<div class="row">
@@ -92,6 +92,51 @@
 					<div class="one column">×1</div>
 				</div>
 
+
+				<h2>Equal-Width Column Sets</h2>
+
+				<div class="row">
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+					<div class="one column">×1</div>
+				</div>
+
+				<div class="row">
+					<div class="two column">×2</div>
+					<div class="two column">×2</div>
+					<div class="two column">×2</div>
+					<div class="two column">×2</div>
+					<div class="two column">×2</div>
+					<div class="two column">×2</div>
+				</div>
+
+				<div class="row">
+					<div class="three column">×3</div>
+					<div class="three column">×3</div>
+					<div class="three column">×3</div>
+					<div class="three column">×3</div>
+				</div>
+
+				<div class="row">
+					<div class="four column">×4</div>
+					<div class="four column">×4</div>
+					<div class="four column">×4</div>
+				</div>
+
+				<div class="row">
+					<div class="six column">×6</div>
+					<div class="six column">×6</div>
+				</div>
+
 				<div class="row">
 					<div class="twelve column">×12</div>
 				</div>
@@ -109,8 +154,8 @@
 				<h2>Off-Balance 3-Column Layout</h2>
 
 				<div class="row large">
-					<div class="six column">×6</div>
-					<div class="three column">×3</div>
+					<div class="five column">×5</div>
+					<div class="four column">×4</div>
 					<div class="three column">×3</div>
 				</div>
 
@@ -144,22 +189,22 @@
 				<h2>Sample Page Layout</h2>
 
 				<div class="row x-large">
-					<div class="twelve column">×12</div>
+					<div class="twelve column">×12 (Header)</div>
 				</div>
 
 				<div class="row medium">
-					<div class="six column">×6</div>
-					<div class="six column">×6</div>
+					<div class="six column">×6 (Feature)</div>
+					<div class="six column">×6 (Feature)</div>
 				</div>
 
 				<div class="row large">
-					<div class="four column">×4</div>
-					<div class="four column">×4</div>
-					<div class="four column">×4</div>
+					<div class="four column">×4 (Highlight)</div>
+					<div class="four column">×4 (Highlight)</div>
+					<div class="four column">×4 (Highlight)</div>
 				</div>
 
 				<div class="row medium">
-					<div class="twelve column">×12</div>
+					<div class="twelve column">×12 (Footer)</div>
 				</div>
 			</div>
 		</div>
