Update header to reference Arrange

--- a/gather.html
+++ b/gather.html
@@ -124,7 +124,7 @@
 				</fieldset>
 			</form>
 			
-			<h2>Within the Grid</h2>
+			<h2>Within <em>Arrange</em></h2>
 			
 			<div class="container">
 				<div class="seven column">
