--- a/arrange.html
+++ b/arrange.html
@@ -96,49 +96,81 @@
 				<h2>Equal-Width Column Sets</h2>
 
 				<div class="row">
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
-					<div class="one column">×1</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
+					<div class="twelfth column">1/12</div>
 				</div>
 
 				<div class="row">
-					<div class="two column">×2</div>
-					<div class="two column">×2</div>
-					<div class="two column">×2</div>
-					<div class="two column">×2</div>
-					<div class="two column">×2</div>
-					<div class="two column">×2</div>
+					<div class="sixth column">1/6</div>
+					<div class="sixth column">1/6</div>
+					<div class="sixth column">1/6</div>
+					<div class="sixth column">1/6</div>
+					<div class="sixth column">1/6</div>
+					<div class="sixth column">1/6</div>
 				</div>
 
 				<div class="row">
-					<div class="three column">×3</div>
-					<div class="three column">×3</div>
-					<div class="three column">×3</div>
-					<div class="three column">×3</div>
+					<div class="fourth column">1/4</div>
+					<div class="fourth column">1/4</div>
+					<div class="fourth column">1/4</div>
+					<div class="fourth column">1/4</div>
 				</div>
 
 				<div class="row">
-					<div class="four column">×4</div>
-					<div class="four column">×4</div>
-					<div class="four column">×4</div>
+					<div class="third column">1/3</div>
+					<div class="third column">1/3</div>
+					<div class="third column">1/3</div>
 				</div>
 
 				<div class="row">
-					<div class="six column">×6</div>
-					<div class="six column">×6</div>
+					<div class="half column">1/2</div>
+					<div class="half column">1/2</div>
 				</div>
 
 				<div class="row">
-					<div class="twelve column">×12</div>
+					<div class="full column">1/1</div>
+				</div>
+
+
+				<h2>Off-Grid Equal-Width Column Sets</h2>
+
+				<div class="row">
+					<div class="eighth column">1/8</div>
+					<div class="eighth column">1/8</div>
+					<div class="eighth column">1/8</div>
+					<div class="eighth column">1/8</div>
+					<div class="eighth column">1/8</div>
+					<div class="eighth column">1/8</div>
+					<div class="eighth column">1/8</div>
+					<div class="eighth column">1/8</div>
+				</div>
+
+				<div class="row">
+					<div class="seventh column">1/7</div>
+					<div class="seventh column">1/7</div>
+					<div class="seventh column">1/7</div>
+					<div class="seventh column">1/7</div>
+					<div class="seventh column">1/7</div>
+					<div class="seventh column">1/7</div>
+					<div class="seventh column">1/7</div>
+				</div>
+
+				<div class="row">
+					<div class="fifth column">1/5</div>
+					<div class="fifth column">1/5</div>
+					<div class="fifth column">1/5</div>
+					<div class="fifth column">1/5</div>
+					<div class="fifth column">1/5</div>
 				</div>
 
 
