Change class name to 'gutterless'

--- a/arrange.html
+++ b/arrange.html
@@ -211,57 +211,57 @@
 
 				<h2>The Gutterless Grid</h2>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="one column">×1</div>
 					<div class="eleven column">×11</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="two column">×2</div>
 					<div class="ten column">×10</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="three column">×3</div>
 					<div class="nine column">×9</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="four column">×4</div>
 					<div class="eight column">×8</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="five column">×5</div>
 					<div class="seven column">×7</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="six column">×6</div>
 					<div class="six column">×6</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="seven column">×7</div>
 					<div class="five column">×5</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="eight column">×8</div>
 					<div class="four column">×4</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="nine column">×9</div>
 					<div class="three column">×3</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="ten column">×10</div>
 					<div class="two column">×2</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="eleven column">×11</div>
 					<div class="one column">×1</div>
 				</div>
@@ -269,7 +269,7 @@
 
 				<h2>Equal-Width Column Sets</h2>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="sixth column">1/6</div>
 					<div class="sixth column">1/6</div>
 					<div class="sixth column">1/6</div>
@@ -278,32 +278,32 @@
 					<div class="sixth column">1/6</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="fourth column">1/4</div>
 					<div class="fourth column">1/4</div>
 					<div class="fourth column">1/4</div>
 					<div class="fourth column">1/4</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="third column">1/3</div>
 					<div class="third column">1/3</div>
 					<div class="third column">1/3</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="half column">1/2</div>
 					<div class="half column">1/2</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="full column">1/1</div>
 				</div>
 
 
 				<h2>Off-Grid Equal-Width Column Sets</h2>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="eighth column">1/8</div>
 					<div class="eighth column">1/8</div>
 					<div class="eighth column">1/8</div>
@@ -314,7 +314,7 @@
 					<div class="eighth column">1/8</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="seventh column">1/7</div>
 					<div class="seventh column">1/7</div>
 					<div class="seventh column">1/7</div>
@@ -324,7 +324,7 @@
 					<div class="seventh column">1/7</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="fifth column">1/5</div>
 					<div class="fifth column">1/5</div>
 					<div class="fifth column">1/5</div>
@@ -335,7 +335,7 @@
 
 				<h2>All Available Equal-Width Column Sets</h2>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="eighth column">1/8</div>
 					<div class="eighth column">1/8</div>
 					<div class="eighth column">1/8</div>
@@ -346,7 +346,7 @@
 					<div class="eighth column">1/8</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="seventh column">1/7</div>
 					<div class="seventh column">1/7</div>
 					<div class="seventh column">1/7</div>
@@ -356,7 +356,7 @@
 					<div class="seventh column">1/7</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="sixth column">1/6</div>
 					<div class="sixth column">1/6</div>
 					<div class="sixth column">1/6</div>
@@ -365,7 +365,7 @@
 					<div class="sixth column">1/6</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="fifth column">1/5</div>
 					<div class="fifth column">1/5</div>
 					<div class="fifth column">1/5</div>
@@ -373,25 +373,25 @@
 					<div class="fifth column">1/5</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="fourth column">1/4</div>
 					<div class="fourth column">1/4</div>
 					<div class="fourth column">1/4</div>
 					<div class="fourth column">1/4</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="third column">1/3</div>
 					<div class="third column">1/3</div>
 					<div class="third column">1/3</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="half column">1/2</div>
 					<div class="half column">1/2</div>
 				</div>
 
-				<div class="row no-gutters">
+				<div class="row gutterless">
 					<div class="full column">1/1</div>
 				</div>
 				
